<resources>
    <string name="app_name">BloodDonationApp</string>
    <string name="block_splash_screen">SplashScreen</string>
    <string name="block_login">Login</string>
    <string name="name">BLOOD DONATION</string>
    <string name="subname">Made In Tunisia</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="phone_number">Phone Number</string>
    <string name="login">LOGIN</string>
    <string name="verify">VERIFY NUMBER</string>
    <string name="country_number">+216</string>
    <string name="phone">Type your phone number</string>
    <string name="validate">Validate</string>
    <string name="sms">Send my sms code</string>
    <string name="validate_sms">- - - - - -</string>
    <string name="become_donor">BECOME DONOR</string>
    <string name="save_button">Save</string>
    <string name="email">Email</string>
    <string name="pseudo">Name</string>
    <string name="gender">Gender</string>
    <string name="blood_group">Select blood group</string>
    <string name="terms">Do you want to make your contact number visible for other</string>
    <string name="donors_number">1234</string>
    <string name="donors_text">Donors</string>
    <string name="find_donors">Find donor</string>
    <string name="request_text">Requests</string>
    <string name="see_request">See request</string>
    <string name="contact">Contact</string>
    <string name="heroDonor">HERO DONOR</string>
    <string name="clock">6 hours ago</string>
    <string name="place">Tunis</string>
    <string name="newRequest">New Request</string>
    <string name="btn_add_request">ADD REQUEST</string>
    <string name="askForHelp">Ask For Help</string>
    <string name="requestBlood">Request For Blood</string>
    <string name="bloodFor">Blood For</string>
    <string name="cityPreference">City Preference</string>
    <string name="submit">Submit</string>
    <string name="hint_post">Say something about this photo...</string>
    <string name="pls_wait_txt">Loading ...</string>
    <string name="facebook_app_id">217447735815875</string>
    <string name="fb_login_protocol_scheme">fb217447735815875</string>
    <string name="title_activity_welcome_actitvity">WelcomeActitvity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="FACEBOOK_APP_ID">217447735815875</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">2136d060e07271c464d50e6c3ec9e443</string>
    <string name="ak_login_protocol_scheme">ak217447735815875</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="path">Path : %1$s</string>
    <string name="size">Size :  %1$d</string>
    <string name="mime">Mime: %1$s</string>
    <string name="bucketname">BucketName : %1$s</string>
    <string name="change_image">Change image</string>
    <string name="gallery">gallery</string>
    <string name="btn_add">Add</string>
    <string name="home">Home</string>
    <string name="call">Call</string>
    <string name="postion">position</string>


</resources>
