<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal|bottom"
    android:background="@drawable/bg"
    tools:context=".SplashScreenActivity"
    android:id="@+id/parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"/>

   <Button
       android:id="@+id/facebook"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/facebook"
       android:background="@drawable/facebook"
       android:layout_marginBottom="20dp"/>




    <Button
        android:id="@+id/google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/google"
        android:background="@drawable/google"
        android:textColor="@android:color/black"
        android:layout_marginBottom="20dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/phone"
        android:background="@drawable/phone"
        android:text="@string/phone_number"
        android:textColor="@android:color/black"
        />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <ImageView
            android:id="@+id/block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/block1"
            android:contentDescription="@string/block_splash_screen"
            />




    </RelativeLayout>







</LinearLayout>