<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PhoneVerificationActivity"
    android:background="@android:color/white"
    android:gravity="center_horizontal">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="50dp">

        <Button
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="15dp"
            android:background="@drawable/back"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/back"
            android:layout_alignBaseline="@id/back"
            android:text="@string/verify"
            android:textColor="@android:color/black"/>

    </RelativeLayout>

   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_marginBottom="20dp">

       <EditText
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/country_number"
           android:inputType="number"
           android:background="@drawable/country_number"
           android:hint="@string/country_number"
           android:layout_marginRight="15dp"
           android:textColorHint="@android:color/black"
           android:textAlignment="center"
           />

       <EditText
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/phone_number"
           android:inputType="number"
           android:background="@drawable/phone_number"
           android:textAlignment="center"
           android:textColorHint="@android:color/darker_gray"
           android:hint="@string/phone"/>



   </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sms"
        android:background="@drawable/validate_button"
        android:layout_marginBottom="30dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sms"
        android:inputType="number"
        android:background="@drawable/phone_number"
        android:textAlignment="center"
        android:textColorHint="@android:color/darker_gray"
        android:layout_marginBottom="20dp"
        android:visibility="invisible"
        android:hint="@string/validate_sms"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/validate"
        android:visibility="invisible"
        android:background="@drawable/validate_button"
        />





</LinearLayout>