<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".WelcomeActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/bg_2"
        android:gravity="center_horizontal"
        android:orientation="vertical">

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="15dp">
    <Button

        android:id="@+id/menu"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_gravity="start"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/menu" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/search"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_gravity="end"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/search" />


</LinearLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@drawable/block2">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/donors_number"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/donors_text"/>
            </LinearLayout>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/whie_button"
                android:textColor="@color/colorPrimary"
                android:text="@string/find_donors"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/block2">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/donors_number"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/request_text"/>
            </LinearLayout>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/whie_button"
                android:textColor="@color/colorPrimary"
                android:text="@string/see_request"/>

        </LinearLayout>



    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </FrameLayout>







</LinearLayout>