<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".BecomeDonorActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="50dp">

        <Button
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="15dp"
            android:background="@drawable/back"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/back"
            android:layout_alignBaseline="@id/back"
            android:text="@string/become_donor"
            android:textColor="@android:color/black"/>

    </RelativeLayout>

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/phone_number"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textColorHint="@android:color/darker_gray"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/phone_number"
        android:inputType="textEmailAddress"
        android:hint="@string/pseudo"
        android:textColorHint="@android:color/darker_gray"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"/>


    <EditText
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/phone_number"
        android:inputType="phone"
        android:hint="@string/phone_number"
        android:textColorHint="@android:color/darker_gray"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textSize="15sp"
        android:textColor="@android:color/black"
        android:layout_gravity="start"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/gender_group">
                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/male_checkbox"
                    android:layout_marginRight="20dp"/>
                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/female_checkbox"
                    />
            </RadioGroup>

        </LinearLayout>
    </RelativeLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blood_group"
        android:textSize="15sp"
        android:textColor="@android:color/black"
        android:layout_gravity="start"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"/>

    <RadioGroup
        android:id="@+id/blood_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp">

        <RadioButton
            android:id="@+id/a_moins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:button="@drawable/a_moins_checkbox"/>

        <RadioButton
            android:id="@+id/a_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:button="@drawable/a_plus_checkbox"
            />
        <RadioButton
            android:id="@+id/b_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:button="@drawable/b_plus_checkbox"
            />
        <RadioButton
            android:id="@+id/b_moins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:button="@drawable/b_moins_checkbox"
            />
        <RadioButton
            android:id="@+id/o_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:button="@drawable/o_plus_checkbox"
            />
        <RadioButton
            android:id="@+id/o_moins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:button="@drawable/o_moins_checkbox"
            />
        <RadioButton
            android:id="@+id/ab_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/ab_plus_checkbox"
            android:layout_marginRight="5dp"/>
        <RadioButton
            android:id="@+id/ab_moins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/ab_moins_checkbox"
            />


    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/terms"
            android:checked="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms"
            android:textColor="@android:color/black"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/save"
        android:text="@string/save_button"
        android:background="@drawable/validate_button"/>





</LinearLayout>