<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".BecomeDonorActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/requestBlood"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/phone_number"
        android:hint="@string/bloodFor"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray" />

    <EditText
        android:id="@+id/place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/phone_number"
        android:hint="@string/cityPreference"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp">

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blood_group"
        android:textSize="15sp"
        android:textColor="@android:color/black"
        android:layout_gravity="start"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"/>

    <RadioGroup
        android:id="@+id/blood_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp">

        <RadioButton
            android:id="@+id/a_moins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:button="@drawable/a_moins_checkbox"
            />
        <RadioButton
            android:id="@+id/b_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:button="@drawable/b_plus_checkbox"
            />
        <RadioButton
            android:id="@+id/b_moins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:button="@drawable/b_moins_checkbox"
            />
        <RadioButton
            android:id="@+id/o_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:button="@drawable/o_plus_checkbox"
            />
        <RadioButton
            android:id="@+id/o_moins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:button="@drawable/o_moins_checkbox"
            />
        <RadioButton
            android:id="@+id/ab_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/ab_plus_checkbox"
            android:layout_marginRight="5dp"/>
        <RadioButton
            android:id="@+id/ab_moins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/ab_moins_checkbox"
            />


    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp"></LinearLayout>

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/validate_button"
        android:text="@string/submit" />





</LinearLayout>