<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >


    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        card_view:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:padding="7dp">

            <EditText
                android:id="@+id/in_postion"
                android:layout_width="126dp"
                android:layout_height="wrap_content"

                android:layout_alignStart="@+id/in_number"
                android:layout_alignParentTop="true"
                android:hint="@string/postion" />

            <EditText
                android:id="@+id/in_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="102dp"
                android:hint="@string/phone_number" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="93dp"
                android:layout_marginRight="93dp"

                card_view:srcCompat="@drawable/a_moins_selected" />

            <ImageView
                android:layout_width="54dp"
                android:layout_height="18dp"
                android:layout_alignTop="@+id/in_postion"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="7dp"
                android:layout_marginRight="7dp"
                android:layout_toStartOf="@+id/in_postion"
                android:layout_toLeftOf="@+id/in_postion"
                card_view:srcCompat="@drawable/ic_marker" />

            <ImageView
                android:layout_width="42dp"
                android:layout_height="18dp"
                android:layout_alignTop="@+id/in_number"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="14dp"
                android:layout_marginRight="14dp"
                android:layout_marginBottom="24dp"
                android:layout_toStartOf="@+id/in_number"
                android:layout_toLeftOf="@+id/in_number"
                card_view:srcCompat="@drawable/ic_phone" />

            <TextView
                android:id="@+id/txt_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/txt_postion"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="19dp"
                android:layout_marginRight="19dp"
                android:text="15m"
                android:textColor="@color/com_facebook_button_background_color_disabled" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="18dp"
                android:text="@string/call"
                android:textColor="@color/colorPrimary" />
        </RelativeLayout>


    </android.support.v7.widget.CardView>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_height="match_parent" />


</android.support.design.widget.CoordinatorLayout>
